Bug 323197 - cmake: $PKGDATADIR not set -> l10n broken after installation
Summary: cmake: $PKGDATADIR not set -> l10n broken after installation
Status: RESOLVED FIXED
Alias: None
Product: trojita
Classification: Applications
Component: Other (other bugs)
Version First Reported In: git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Trojita default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-05 16:21 UTC by Jan Kundrát
Modified: 2013-08-07 15:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Kundrát 2013-08-05 16:21:50 UTC
Pali found out that the PKGDATADIR is not defined anymore since the switch to cmake. It shall be set so that Trojita know to look for the .ts files in /usr/share/trojita at runtime.
Comment 1 Jan Kundrát 2013-08-06 08:39:25 UTC
Patch for review at https://git.reviewboard.kde.org/r/111896/ .
Comment 2 Jan Kundrát 2013-08-07 15:12:33 UTC
Git commit 9d8933f8f026855f99c35befbb31654a932e69fa by Jan Kundrát.
Committed on 05/08/2013 at 16:37.
Pushed by jkt into branch 'master'.

cmake: publish $PKGDATADIR

M  +2    -0    CMakeLists.txt
M  +1    -0    src/Gui/Util.cpp
A  +1    -0    src/configure.cmake.in

http://commits.kde.org/trojita/9d8933f8f026855f99c35befbb31654a932e69fa