cmake: publish $PKGDATADIR

BUG: 323197